page pacient and partner front-end ok

--- a/src/pages/Paciente/index.html
+++ b/src/pages/Paciente/index.html
@@ -30,20 +30,22 @@
     <main>
       <section>
         <div class="content_section">
-          <h1>Sua jornada de bem-estar começa aqui</h1>
+          <h1>Sua jornada de bem-estar começa aqui.</h1>
           <p>
-            Conectando pontos e unificando dados para uma vida mais saudável. Você no controle da sua saúde e alcançar uma vida mais saudável e bem-estar duradouro.
+            Conectando pontos e unificando dados para uma vida mais saudável.
+            Você no controle da sua saúde e alcançar uma vida mais saudável e
+            bem-estar duradouro.
           </p>
-          <div class="container_button">          <a class="sign_in " href="#">Entrar no portal</a>
+          <div class="container_button">
+            <a class="sign_in" href="#">Entrar no portal</a>
             <a class="sign_up" href="#">Cadastrar</a>
           </div>
-
         </div>
         <div>
           <img src="/src/assets/images/banner-pacient.svg" alt="banner-home" />
         </div>
       </section>
-      
+
       <h2>Motivos para escolher o HealthUnify</h2>
       <section class="container_section_cards">
         <div class="card">
@@ -56,8 +58,8 @@
 
             <li>
               <p>
-                Visualize e compartilhe facilmente resultados de exames com seus médicos.
-           
+                Visualize e compartilhe facilmente resultados de exames com seus
+                médicos.
               </p>
             </li>
           </ul>
@@ -73,7 +75,8 @@
 
             <li>
               <p>
-                Acesso ao seu histórico, para você acompanhar sua jornada de bem-estar.    </p>
+                Acesso ao seu histórico, para você acompanhar sua jornada de
+                bem-estar.
               </p>
             </li>
           </ul>
@@ -89,7 +92,9 @@
 
             <li>
               <p>
-                Encontre e agende consultas com especialistas de forma rápida.         </li>
+                Encontre e agende consultas com especialistas de forma rápida.
+              </p>
+            </li>
           </ul>
         </div>
       </section>
@@ -146,10 +151,14 @@
         <script src="/src/assets/js/carousel.js"></script>
       </section>
 
-     <article>
+      <article>
         <!-- imagem paciente -->
-        <img class="image_pacient" src="/src/assets/images/image-pacient.svg" alt="">
-     </article>
+        <img
+          class="image_pacient"
+          src="/src/assets/images/image-pacient.svg"
+          alt=""
+        />
+      </article>
     </main>
 
     <footer>
