--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <section class="container_section_cards">
         <div class="card">
           <ul class="content_card">
-            <li><img src="./src/assets/images/icon-card-1-home.svg" alt="" /></li>
+            <li>
+              <img src="./src/assets/images/icon-card-1-home.svg" alt="" />
+            </li>
 
             <li>
               <h3>Acesso fácil e seguro</h3>
@@ -59,7 +61,9 @@
 
         <div class="card">
           <ul class="content_card">
-            <li><img src="./src/assets/images/icon-card-2-home.svg" alt="" /></li>
+            <li>
+              <img src="./src/assets/images/icon-card-2-home.svg" alt="" />
+            </li>
 
             <li>
               <h3>Economia de tempo e recursos</h3>
@@ -77,7 +81,9 @@
 
         <div class="card">
           <ul class="content_card">
-            <li><img src="./src/assets/images/icon-card-3-home.svg" alt="" /></li>
+            <li>
+              <img src="./src/assets/images/icon-card-3-home.svg" alt="" />
+            </li>
 
             <li>
               <h3>Unificação de dados</h3>
@@ -110,7 +116,7 @@
           <div class="slide">
             <h2>Nossa Missão</h2>
             <p>
-              Oferece acesso fácil e seguro a dados de saúde, permitindo que
+              Oferecer acesso fácil e seguro a dados de saúde, permitindo que
               pacientes e médicos acessem informações quando e onde precisarem.
             </p>
           </div>
@@ -118,16 +124,18 @@
             <h2>Nossa Visão</h2>
             <!-- alterar texto -->
             <p>
-              Oferece acesso fácil e seguro a dados de saúde, permitindo que
-              pacientes e médicos acessem informações quando e onde precisarem.
+              Ser a plataforma de escolha para médicos, pacientes e sistemas de
+              saúde, transformando a gestão da saúde por meio da integração de
+              dados.
             </p>
           </div>
           <div class="slide">
             <h2>Nossos Valores</h2>
             <!-- alterar texto -->
             <p>
-              Oferece acesso fácil e seguro a dados de saúde, permitindo que
-              pacientes e médicos acessem informações quando e onde precisarem.
+              Nossos valores essenciais incluem inovação, integridade,
+              acessibilidade, colaboração, sustentabilidade, respeito à
+              privacidade e transparência.
             </p>
           </div>
           <a class="control" id="prev" onclick="plusSlides(-1)">
