alt added for accessibility

--- a/src/pages/Paciente/index.html
+++ b/src/pages/Paciente/index.html
@@ -50,7 +50,7 @@
       <section class="container_section_cards">
         <div class="card">
           <ul class="content_card">
-            <li><img src="/src/assets/images/icon-card-1.svg" alt="" /></li>
+            <li><img src="/src/assets/images/icon-card-1.svg" alt="icon-card" /></li>
 
             <li>
               <h3>Fácil acesso a exames e resultados</h3>
@@ -67,7 +67,7 @@
 
         <div class="card">
           <ul class="content_card">
-            <li><img src="/src/assets/images/icon-card-2.svg" alt="" /></li>
+            <li><img src="/src/assets/images/icon-card-2.svg" alt="icon-card" /></li>
 
             <li>
               <h3>Histórico de saúde completo</h3>
@@ -84,7 +84,7 @@
 
         <div class="card">
           <ul class="content_card">
-            <li><img src="/src/assets/images/icon-card-3.svg" alt="" /></li>
+            <li><img src="/src/assets/images/icon-card-3.svg" alt="icon-card" /></li>
 
             <li>
               <h3>Acesso rápido a profissionais da saúde</h3>
@@ -112,7 +112,6 @@
           </div>
           <div class="slide">
             <h2>2. Preencha seus dados</h2>
-            <!-- alterar texto -->
             <p>
               Preencha seus dados pessoais, como cpf, data de nascimento,
               telefone, e outros. Essas informações são fundamentais para a sua
@@ -121,7 +120,6 @@
           </div>
           <div class="slide">
             <h2>3. Acompanhe seu histórico de saúde</h2>
-            <!-- alterar texto -->
             <p>
               Com o HealthUnify, você pode acompanhar todas as informações
               relevantes para tomar decisões informadas sobre seu bem-estar e
@@ -132,14 +130,14 @@
             <img
               class="icon_arrow"
               src="/src/assets/images/icon-arrow-prev.svg"
-              alt=""
+              alt="icon-arrow-prev"
             />
           </a>
           <a class="control" id="next" onclick="plusSlides(1)">
             <img
               class="icon_arrow"
               src="/src/assets/images/icon-arrow-next.svg"
-              alt=""
+              alt="icon-arrow-next"
             />
           </a>
           <div class="indicadores">
@@ -156,7 +154,7 @@
         <img
           class="image_pacient"
           src="/src/assets/images/image-pacient.svg"
-          alt=""
+          alt="image-pacient"
         />
       </article>
     </main>
