--- a/src/pages/Parceiros/index.html
+++ b/src/pages/Parceiros/index.html
@@ -48,7 +48,7 @@
       <section class="container_section_cards">
         <div class="card">
           <ul class="content_card">
-            <li><img src="/src/assets/images/icon-card-1.svg" alt="" /></li>
+            <li><img src="/src/assets/images/icon-card-1.svg" alt="icon-card" /></li>
 
             <li>
               <h3>Centralização dos registros de saúde</h3>
@@ -64,7 +64,7 @@
 
         <div class="card">
           <ul class="content_card">
-            <li><img src="/src/assets/images/icon-card-2.svg" alt="" /></li>
+            <li><img src="/src/assets/images/icon-card-2.svg" alt="icon-card" /></li>
 
             <li>
               <h3>Preencha sua documentação profissional</h3>
@@ -78,7 +78,7 @@
 
         <div class="card">
           <ul class="content_card">
-            <li><img src="/src/assets/images/icon-card-3.svg" alt="" /></li>
+            <li><img src="/src/assets/images/icon-card-3.svg" alt="icon-card" /></li>
 
             <li>
               <h3>Adicione seus profissionais de saúde</h3>
@@ -106,7 +106,6 @@
           </div>
           <div class="slide">
             <h2>2. Preencha sua documentação profissional</h2>
-            <!-- alterar texto -->
             <p>
               Forneça o número do CNPJ da sua empresa. É essencial para garantir
               a legitimidade da sua empresa e permitir o acesso às
@@ -115,7 +114,6 @@
           </div>
           <div class="slide">
             <h2>3. Adicione seus profissionais de saúde</h2>
-            <!-- alterar texto -->
             <p>
               É hora de cadastrar sua equipe, caso tenha uma. Adicione seus
               profissionais de saúde para começar a colaborar na prestação de
@@ -126,14 +124,14 @@
             <img
               class="icon_arrow"
               src="/src/assets/images/icon-arrow-prev.svg"
-              alt=""
+              alt="icon-arrow-prev"
             />
           </a>
           <a class="control" id="next" onclick="plusSlides(1)">
             <img
               class="icon_arrow"
               src="/src/assets/images/icon-arrow-next.svg"
-              alt=""
+              alt="icon-arrow-next"
             />
           </a>
           <div class="indicadores">
@@ -150,7 +148,7 @@
         <img
           class="image_pacient"
           src="/src/assets/images/image-partner.svg"
-          alt=""
+          alt="image-partner"
         />
       </article>
     </main>
