--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="card">
           <ul class="content_card">
             <li>
-              <img src="./src/assets/images/icon-card-1-home.svg" alt="" />
+              <img src="./src/assets/images/icon-card-1-home.svg" alt="icon-card" />
             </li>
 
             <li>
@@ -62,7 +62,7 @@
         <div class="card">
           <ul class="content_card">
             <li>
-              <img src="./src/assets/images/icon-card-2-home.svg" alt="" />
+              <img src="./src/assets/images/icon-card-2-home.svg" alt="icon-card" />
             </li>
 
             <li>
@@ -82,7 +82,7 @@
         <div class="card">
           <ul class="content_card">
             <li>
-              <img src="./src/assets/images/icon-card-3-home.svg" alt="" />
+              <img src="./src/assets/images/icon-card-3-home.svg" alt="icon-card" />
             </li>
 
             <li>
@@ -122,7 +122,6 @@
           </div>
           <div class="slide">
             <h2>Nossa Visão</h2>
-            <!-- alterar texto -->
             <p>
               Ser a plataforma de escolha para médicos, pacientes e sistemas de
               saúde, transformando a gestão da saúde por meio da integração de
@@ -131,7 +130,6 @@
           </div>
           <div class="slide">
             <h2>Nossos Valores</h2>
-            <!-- alterar texto -->
             <p>
               Nossos valores essenciais incluem inovação, integridade,
               acessibilidade, colaboração, sustentabilidade, respeito à
@@ -142,14 +140,14 @@
             <img
               class="icon_arrow"
               src="./src/assets/images/icon-arrow-prev-home.svg"
-              alt=""
+              alt="icon-arrow-prev"
             />
           </a>
           <a class="control" id="next" onclick="plusSlides(1)">
             <img
               class="icon_arrow"
               src="./src/assets/images/icon-arrow-next-home.svg"
-              alt=""
+              alt="icon-arrow-next"
             />
           </a>
           <div class="indicadores">
@@ -166,7 +164,7 @@
           <img
             class="image_cta"
             src="./src/assets/images/vector-card-pacient.svg"
-            alt=""
+            alt="image-cta"
           />
 
           <ul class="content_card_cta">
@@ -185,7 +183,7 @@
           <img
             class="image_cta"
             src="./src/assets/images/vector-card-professional.svg"
-            alt=""
+            alt="image-cta"
           />
 
           <ul class="content_card_cta">
@@ -206,7 +204,7 @@
         <h2>Nossos criadores</h2>
         <div>
           <ul>
-            <li><img src="./src/assets/images/image-card-1.svg" alt="" /></li>
+            <li><img src="./src/assets/images/image-card-1.svg" alt="image-card" /></li>
             <li>
               <h3>Augusto Ryu</h3>
               <p>
@@ -229,7 +227,7 @@
             </li>
           </ul>
           <ul>
-            <li><img src="./src/assets/images/image-card-2.svg" alt="" /></li>
+            <li><img src="./src/assets/images/image-card-2.svg" alt="image-card" /></li>
             <li>
               <h3>Beatriz Peres</h3>
               <p>
@@ -252,7 +250,7 @@
             </li>
           </ul>
           <ul>
-            <li><img src="./src/assets/images/image-card-3.svg" alt="" /></li>
+            <li><img src="./src/assets/images/image-card-3.svg" alt="image-card" /></li>
             <li>
               <h3>Cibele Rodrigues</h3>
               <p>
@@ -277,7 +275,7 @@
             </li>
           </ul>
           <ul>
-            <li><img src="./src/assets/images/image-card-4.svg" alt="" /></li>
+            <li><img src="./src/assets/images/image-card-4.svg" alt="image-card" /></li>
             <li>
               <h3>Eduardo Tavares</h3>
               <p>
