logo added to pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <header>
-      <div>logo</div>
+      <div>
+        <img src="./src/assets/images/logo.svg" alt="logo-health-unify">   
+      </div>
       <nav>
         <ul>
           <li>
@@ -99,17 +101,6 @@
         </div>
       </section>
 
-      <section>
-        <iframe
-          width="100%"
-          height="684"
-          src="https://www.youtube.com/embed/u7UVt-16hOU?si=Yd-tXaVHbAGMkrJ8"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </section>
 
       <section>
         <div class="carrusel">
@@ -304,7 +295,9 @@
     <footer>
       <div>
         <ul>
-          <li>logo</li>
+          <li>
+            <img src="./src/assets/images/logo.svg" alt="logo-health-unify">
+          </li>
           <li class="content_copy">
             <img
               class="copy"
