--- a/src/pages/Paciente/index.html
+++ b/src/pages/Paciente/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <div>logo</div>
+      <div>
+        <img src="/src/assets/images/logo.svg" alt="logo-health-unify">   
+      </div>
       <nav>
         <ul>
           <li>
@@ -162,7 +164,9 @@
     <footer>
       <div>
         <ul>
-          <li>logo</li>
+          <li>
+            <img src="/src/assets/images/logo.svg" alt="logo-health-unify">
+          </li>
           <li class="content_copy">
             <img
               class="copy"
